--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -139,7 +139,10 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .section-four .wrapper { position: relative; height: inherit; min-height: inherit; margin: 0px auto; text-align: center; }
 .section-four .wrapper.padding { padding: 0px 12px 96px; }
 .section-four .wrapper.padding-more { padding: 0px 10% 96px; }
+.section-four .wrapper.pad-top { padding-top: 64px; }
 .section-four .wrapper.large { max-width: 100%; }
+.section-four .wrapper.center { text-align: center; }
+.section-four .wrapper.small { max-width: 360px; }
 .section-four img { }
 .section-four img.abs { position: absolute; }
 .section-four img.full { display: block; width: 100%; }
@@ -149,9 +152,13 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .section-four img.eighty-five { width: 85%; }
 .section-four img.thirty { width: 30%; }
 .section-four h3 { font-family: 'akzidenz-light-cn'; font-size: 50px; color: #696969; font-weight: normal; }
+.section-four h3.uppercase { text-transform: uppercase; }
+.section-four h5 { font-family: 'akzidenz-light'; font-size: 25px; color: #696969; font-weight: normal; }
+.section-four a { text-decoration: none; }
 .section-four .button-holder { position: absolute; bottom: 20%; left: 0%; right: 0%; text-align: center; }
 .section-four .button { font-family: 'akzidenz-light-cn'; font-size: 41px; color: #666; padding: 12px 48px; background-color: rgba(255,255,255, .25); border: 1px solid #fff; border-radius: 1px; text-decoration: none;  }
 .section-four .button:hover { color: #999; background-color: #fff; }
+/*.section-four .map { pointer-events: none; }*/
 
 .section-five { }
 .section-five .wrapper { position: relative; /*padding: 0px;*/ padding: 0px 24px; }
@@ -207,6 +214,7 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
     .header-one video { display: none; }
     .header-one .fallback { display: block; width: auto; max-width: 100%; }
 	.header-one h1 { top: 32px; } /*lower title*/
+    .header-one .loader { display: none; }
 	
 	.section-three .left { display: block; width: 100%; padding: 0px; }
 	.section-three .right { display: block; width: 100%; padding: 0px; }
