--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,6 +13,11 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .nav .large-logo { opacity: 1; position: absolute; left: 4px; top: 4px; }
 .nav .small-logo { opacity: 0; potision: absolute; left: 0; }
 
+.side-nav { width: 64px; top: 40%; right:0; z-index: 1; position: fixed; background-color: transparent;}
+.side-nav:hover { right: 48px; }
+.side-nav a { width: 100%; }
+.side-nav a img { width: 100%; }
+
 .nav.small { height: 64px; }
 .nav .wrapper { padding: 0px 12px; }
 .nav.small .right a { line-height: 64px; }
