--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -248,6 +248,7 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 	.nav:hover .right {  width: 100%; margin-top: -64px;  }
 	.nav:hover .right > .nav-items { opacity: 1; background-color: #FFF; }
 	.nav:hover .right > .nav-items > a { display: block; border-top: 1px solid #f5f5f5; }
+    .side-nav { top: 64px; }
 	.header-one h1 { font-size: 40px; }
 	.header-one .owl-carousel .item {  }
 	.header-one .fallback { top: 27%; }
