--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,10 +80,13 @@ body { background-color: #eeedef; font-family: 'akzidenz-cn'; }
 .section-two .owl-carousel img { margin: 0px 0px 36px; }
 .section-two .owl-carousel.owl-theme .owl-controls .owl-buttons .owl-next { border-radius: 0px; background: url('../img/slider-right2.png'); padding: 0px; right: 0px; width: 20px; height: 72px; position: absolute; bottom: 50%; }
 .section-two .owl-carousel.owl-theme .owl-controls .owl-buttons .owl-prev { border-radius: 0px; background: url('../img/slider-left2.png'); padding: 0px; left: 0px; width: 20px; height: 72px; position: absolute; bottom: 50%; }
+.section-two .wrapper.smaller { max-width: 480px; }
+.section-two .item.smaller { max-width: 420px; margin: 0 auto; }
 
 .section-three { background-color: #fff; overflow-x: hidden; position: relative; overflow: hidden; }
 .section-three .wrapper { padding: 36px 12px 80px; }
 .section-three .wrapper.small { max-width: 640px; text-align: center; }
+.section-three .wrapper.smaller { max-width: 480px; text-align: center; }
 .section-three h3 { font-family: 'akzidenz-light-cn'; font-size: 50px; color: #696969; font-weight: normal; }
 .section-three p { font-family: 'akzidenz-light'; font-size: 23px; color: #696969; line-height: 32px; }
 .section-three p.white { color: #fff; }
