--- a/games/christmas-cards/www/css/stylesheet.css
+++ b/games/christmas-cards/www/css/stylesheet.css
@@ -4,7 +4,7 @@ canvas { display: block; width: 100%; height: auto; background-color: transparen
 div { font-family: 'akzidenz-light-cn'; text-align: center; color: #666666; }
 h1, h3, p { margin: 0; }
 h1 { font-size: 72px; line-height: 64px; margin: 12px 0 6px; }
-h3 { font-size: 48px; line-height: 36px; }
+h3 { font-size: 48px; line-height: 36px; margin: 0 0 24px; }
 p, input[type="text"], button {
     outline-width: 0 !important;
     font-size: 36px !important;
@@ -12,7 +12,14 @@ p, input[type="text"], button {
     text-align: center;
 }
 input[type="text"] { border: 2px solid #cccccc !important; margin: 12px 0; }
-.ok { color: #ffffff !important; display: block !important; background-color: #bed62f !important; margin: 12px auto !important; padding: 16px !important; width: 100% !important; }
+.ok {
+    color: #ffffff !important;
+    display: block !important;
+    background-color: #bed62f !important;
+    margin: 12px auto !important;
+    padding: 16px !important;
+    width: 100% !important;
+}
 .ok:hover { opacity: 0.5; }
 .cancel { display: none !important; }
 .retry {
@@ -21,26 +28,31 @@ input[type="text"] { border: 2px solid #cccccc !important; margin: 12px 0; }
     box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
     color: #666666;
     cursor: pointer;
-    display: none; /*start hidden*/
+    display: table;
     font-size: 32px;
-    margin: 24px auto;
-    padding: 6px 24px;
+    margin: 11px auto 10px;
+    padding: 0px 24px;
 }
-.retry:hover { box-shadow: inset 0 1px 1px rgba(0,0,0,0.05); margin: 26px auto 22px; }
+.retry:hover { box-shadow: inset 0 1px 1px rgba(0,0,0,0.05); }
 .noselect { -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .content { margin: 0 auto; display: flex; }
 .wrapper { width: 1260px; margin: auto auto; }
 .row { margin-right: 0; margin-left: 0; display: flex; align-items: center; width: 100%; }
 .alertify .dialog nav, .alertify .alert nav { text-align: center !important; }
+.top-border { border-top: 1px solid #cccccc; padding-top: 32px; margin-top: 32px; }
+
+#currentTime { color: #d95555; }
 
 @media(max-width:767px){ /*mobile view*/
     .wrapper { display: block; padding: 32px 0; height: auto !important; }
     .row { display: block; margin-right: 0; margin-left: 0; }
     .row > [class*='col-'] { display: block; }
-    .pad-top { padding-top: 48px; margin-top: 48px; border-top: 1px solid #cccccc; }
+    .pad-top { padding-top: 24px; }
 }
-@media(max-height: 639px) and (orientation: landscape){
-    /*.wrapper { max-width: 640px; }*/
+@media(max-width:480px){ /*mobile view*/
+    h1 { font-size: 48px; line-height: 36px; }
+    h3 { font-size: 32px; line-height: 28px; }
+    p { font-size: 24px !important; line-height: 21px !important; }
 }
 @font-face {
     font-family: 'akzidenz-light-cn';
